[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tool-orchestration-reward"
version = "0.1.0"
description = "RL training and evaluation for multi-step tool orchestration (BFCL/BookingAPI, VERL, graduated rewards)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2.0",
    "pyarrow>=16.0.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
    "boto3>=1.39.11",
    "fastapi>=0.116.1",
    "flagembedding>=1.3.5",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "litellm>=1.74.7",
    "loguru>=0.7.3",
    "matplotlib>=3.10.5",
    "mlflow>=3.3.2",
    "numpy>=2.3.1",
    "openai>=1.0.0",
    "outlines-core>=0.2.11",
    "slowapi>=0.1.9",
    "torch>=2.7.1",
    "uvicorn>=0.35.0",
]

[tool.setuptools]
py-modules = []
